pkg/lang/syntax/testdata/ub/validate/invalid/factory/library-config-nested.ub
factory: {
  inputs: {
    aws-configs: {
      type: list(library-config('github.com/cloudboss/unobin-library-aws'))
    }
  }
}
